# terraform-provider-lago

./: .copywrite.hcl  .gitignore  LICENSE  README.md  Taskfile.yaml  generator_config.yaml  generator_config.yml  go.mod  go.sum  main.go  provider_code_spec.json  pyproject.toml
.github/workflows/: test.yaml
docs/: index.md
examples/provider/: provider.tf
internal/provider/: lago_provider_gen.go  provider.go
internal/provider/resource_add_ons/: add_ons_resource_gen.go
internal/provider/resource_applied_coupons/: applied_coupons_resource_gen.go
internal/provider/resource_billable_metrics/: billable_metrics_resource_gen.go
internal/provider/resource_coupons/: coupons_resource_gen.go
internal/provider/resource_credit_notes/: credit_notes_resource_gen.go
internal/provider/resource_customers/: customers_resource_gen.go
internal/provider/resource_fees/: fees_resource_gen.go
internal/provider/resource_invoices/: invoices_resource_gen.go
internal/provider/resource_plans/: plans_resource_gen.go
internal/provider/resource_taxes/: taxes_resource_gen.go
internal/provider/resource_wallet_transactions/: wallet_transactions_resource_gen.go
internal/provider/resource_wallets/: wallets_resource_gen.go
internal/provider/resource_webhook_endpoints/: webhook_endpoints_resource_gen.go
internal/resources/resource_payment_requests/: payment_requests_resource_gen.go
internal/resources/resource_payments/: payments_resource_gen.go
src/terraform_provider_lago/: __init__.py
tools/: tools.go
(+1 files in other folders)
